--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>BIBLIOTECI IN ANTICHITATE</h1>
     <h2>Mirabela Mari</h2>
     <h2>Prof.coord.Baran Georgeta</h2>
-    <h2>Facultatea de Litere></h2>
+    <h2>Facultatea de Litere</h2>
     <h3>STIINTELE INFORMARII SI DOCUMENTARII</h3>
     <br >
     <section>
